--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Welcome to my favourite pokemon
     </h1>
     <!-- the div where the pokemon shall be loaded -->
-<div class="pokemons"></div>
+<div class="pokemon"></div>
 
   <script src="/coffee.js"></script>  
 </body>
